--- a/164928.html
+++ b/164928.html
@@ -20,108 +20,109 @@
     <div class="tabs-content" data-tabs-content="tabs" id="tabs-content">
       <!-- per-player tab to be cloned -->
       <div class="tabs-panel" id="_player_">
-        <form>
-          <div class="grid-container" id="container">
-            <div class="grid-x grid-padding-x">&nbsp;</div>
-            <!-- number of coins -->
-            <div class="grid-x grid-padding-x">
-              <div class="small-9 cell">
-                <label lang="en" for="coins" class="text-right middle">Number of Coins</label>
-                <label lang="fr" for="coins" class="text-right middle">Nombre de pi&egrave;ces</label>
-              </div>
-              <div class="small-3 cell">
-                <input type="number" id="coins" min="0" data-index="01">
-              </div>
+        <div class="grid-container" id="container">
+          <div class="grid-x grid-padding-x">&nbsp;</div>
+          <!-- number of coins -->
+          <div class="grid-x grid-padding-x">
+            <div class="small-9 cell">
+              <label lang="en" for="coins" class="text-right middle">Number of Coins</label>
+              <label lang="fr" for="coins" class="text-right middle">Nombre de pi&egrave;ces</label>
             </div>
-            <!-- number of grain -->
-            <div class="grid-x grid-padding-x">
-              <div class="small-9 cell">
-                <label lang="en" for="grain" class="text-right middle">Number of Grain Tiles</label>
-                <label lang="fr" for="grain" class="text-right middle">Nombre de tuiles c&eacute;r&eacute;ales</label>
-              </div>
-              <div class="small-3 cell">
-                <input type="number" id="grain" min="0" data-index="02">
-              </div>
-            </div>
-            <!-- number of cheese -->
-            <div class="grid-x grid-padding-x">
-              <div class="small-9 cell">
-                <label lang="en" for="cheese" class="text-right middle">Number of Cheese Tiles</label>
-                <label lang="fr" for="cheese" class="text-right middle">Nombre de tuiles fromage</label>
-              </div>
-              <div class="small-3 cell">
-                <input type="number" id="cheese" min="0" data-index="03">
-              </div>
-            </div>
-            <!-- number of wine -->
-            <div class="grid-x grid-padding-x">
-              <div class="small-9 cell">
-                <label lang="en" for="wine" class="text-right middle">Number of Wine Tiles</label>
-                <label lang="fr" for="wine" class="text-right middle">Nombre de tuiles vin</label>
-              </div>
-              <div class="small-3 cell">
-                <input type="number" id="wine" min="0" data-index="04">
-              </div>
-            </div>
-            <!-- number of wool -->
-            <div class="grid-x grid-padding-x">
-              <div class="small-9 cell">
-                <label lang="en" for="wool" class="text-right middle">Number of Wool Tiles</label>
-                <label lang="fr" for="wool" class="text-right middle">Nombre de tuiles laine</label>
-              </div>
-              <div class="small-3 cell">
-                <input type="number" id="wool" min="0" data-index="05">
-              </div>
-            </div>
-            <!-- number of brocade -->
-            <div class="grid-x grid-padding-x">
-              <div class="small-9 cell">
-                <label lang="en" for="brocade" class="text-right middle">Number of Brocade Tiles</label>
-                <label lang="fr" for="brocade" class="text-right middle">Nombre de tuiles brocard</label>
-              </div>
-              <div class="small-3 cell">
-                <input type="number" id="brocade" min="0" data-index="06">
-              </div>
-            </div>
-            <!-- number of citizens -->
-            <div class="grid-x grid-padding-x">
-              <div class="small-9 cell">
-                <label lang="en" for="citizens" class="text-right middle">Number of Citizens</label>
-                <label lang="fr" for="citizens" class="text-right middle">Nombre de citoyens</label>
-              </div>
-              <div class="small-3 cell">
-                <input type="number" id="citizens" min="0" data-index="07">
-              </div>
-            </div>
-            <!-- number of trading stations -->
-            <div class="grid-x grid-padding-x">
-              <div class="small-9 cell">
-                <label lang="en" for="stations" class="text-right middle">Number of Trading Stations</label>
-                <label lang="fr" for="stations" class="text-right middle">Nombre de postes de commerce</label>
-              </div>
-              <div class="small-3 cell">
-                <input type="number" id="stations" min="0" data-index="08">
-              </div>
-            </div>
-            <!-- development status -->
-            <div class="grid-x grid-padding-x">
-              <div class="small-9 cell">
-                <label lang="en" for="development" class="text-right middle">Development Level</label>
-                <label lang="fr" for="development" class="text-right middle">Niveau de d&eacute;veloppement</label>
-              </div>
-              <div class="small-3 cell">
-                <select id="development">
-                  <option value="1" selected="selected">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  <option value="6">6</option>
-                </select>
-              </div>
+            <div class="small-3 cell">
+              <input type="number" id="coins" min="0" data-index="01">
             </div>
           </div>
-        </form>
+          <!-- number of grain -->
+          <div class="grid-x grid-padding-x">
+            <div class="small-9 cell">
+              <label lang="en" for="grain" class="text-right middle">Number of Grain Tiles</label>
+              <label lang="fr" for="grain" class="text-right middle">Nombre de tuiles c&eacute;r&eacute;ales</label>
+            </div>
+            <div class="small-3 cell">
+              <input type="number" id="grain" min="0" data-index="02">
+            </div>
+          </div>
+          <!-- number of cheese -->
+          <div class="grid-x grid-padding-x">
+            <div class="small-9 cell">
+              <label lang="en" for="cheese" class="text-right middle">Number of Cheese Tiles</label>
+              <label lang="fr" for="cheese" class="text-right middle">Nombre de tuiles fromage</label>
+            </div>
+            <div class="small-3 cell">
+              <input type="number" id="cheese" min="0" data-index="03">
+            </div>
+          </div>
+          <!-- number of wine -->
+          <div class="grid-x grid-padding-x">
+            <div class="small-9 cell">
+              <label lang="en" for="wine" class="text-right middle">Number of Wine Tiles</label>
+              <label lang="fr" for="wine" class="text-right middle">Nombre de tuiles vin</label>
+            </div>
+            <div class="small-3 cell">
+              <input type="number" id="wine" min="0" data-index="04">
+            </div>
+          </div>
+          <!-- number of wool -->
+          <div class="grid-x grid-padding-x">
+            <div class="small-9 cell">
+              <label lang="en" for="wool" class="text-right middle">Number of Wool Tiles</label>
+              <label lang="fr" for="wool" class="text-right middle">Nombre de tuiles laine</label>
+            </div>
+            <div class="small-3 cell">
+              <input type="number" id="wool" min="0" data-index="05">
+            </div>
+          </div>
+          <!-- number of brocade -->
+          <div class="grid-x grid-padding-x">
+            <div class="small-9 cell">
+              <label lang="en" for="brocade" class="text-right middle">Number of Brocade Tiles</label>
+              <label lang="fr" for="brocade" class="text-right middle">Nombre de tuiles brocard</label>
+            </div>
+            <div class="small-3 cell">
+              <input type="number" id="brocade" min="0" data-index="06">
+            </div>
+          </div>
+          <!-- number of citizens -->
+          <div class="grid-x grid-padding-x">
+            <div class="small-9 cell">
+              <label lang="en" for="citizens" class="text-right middle">Number of Citizens</label>
+              <label lang="fr" for="citizens" class="text-right middle">Nombre de citoyens</label>
+            </div>
+            <div class="small-3 cell">
+              <input type="number" id="citizens" min="0" data-index="07">
+            </div>
+          </div>
+          <!-- number of trading stations -->
+          <div class="grid-x grid-padding-x">
+            <div class="small-9 cell">
+              <label lang="en" for="stations" class="text-right middle">Number of Trading Stations</label>
+              <label lang="fr" for="stations" class="text-right middle">Nombre de postes de commerce</label>
+            </div>
+            <div class="small-3 cell">
+              <select id="stations" data-init="0/0/10" data-index="08"><!-- dynamic --></select>
+            </div>
+          </div>
+          <!-- development status -->
+          <div class="grid-x grid-padding-x">
+            <div class="small-9 cell">
+              <label lang="en" for="development" class="text-right middle">Development Level</label>
+              <label lang="fr" for="development" class="text-right middle">Niveau de d&eacute;veloppement</label>
+            </div>
+            <div class="small-3 cell">
+              <select id="development" data-init="1/1/6" data-index="09"><!-- dynamic --></select>
+            </div>
+          </div>
+          <!-- extra VPs (extensions) -->
+          <div class="grid-x grid-padding-x">
+            <div class="small-9 cell">
+              <label lang="en" for="extra" class="text-right middle">Extra VPs</label>
+              <label lang="fr" for="extra" class="text-right middle">PV suppl&eacute;mentaires</label>
+            </div>
+            <div class="small-3 cell">
+              <input type="number" id="extra" data-index="10">
+            </div>
+          </div>
+        </div>
       </div>
       <!-- tab for results -->
       <div class="tabs-panel" id="results">
